--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,27 +1,54 @@
 /* Variables */
-$vin-blue: #5bb7db;
+$title-orange: #ffc107;
 
+$dark-blue: #5C6884;
+$darkest-blue: #1A1A28;
+
+$light-font-color: #ffdc78;
+//$light-font-color: #CBB5AB;
+
+$beige: #807968;
 
 ////////////
 /* Styles */
 ////////////
 
 body {
-  //background-color: #efefef;
-  background-color: #363636;
-
+  background-color: #efefef;
+  //background-color: #363636;
+  //color: $light-font-color;
 }
 
 h1 {
-  color: #e2a331;
+  color: $title-orange;
 }
 
 h2 {
-  color: $vin-blue;
+  color: $title-orange;
 }
 
 
 //////////////
+/* Homepage */
+//////////////
+
+.intro-container {
+  padding: 2rem 1rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  background-color: $dark-blue;
+  border: 0.3rem solid #fff;
+  border-radius: 0.3rem;
+}
+
+@media (min-width: 576px) {
+  .intro-container {
+    padding: 4rem 2rem;
+  }
+}
+
+
+///////////////
 /* AlbumPage */
 ///////////////
 
@@ -41,8 +68,8 @@ h2 {
 
   border-left: solid;
   border-left-width: 10px;
-  border-left-color: slategray;
-  background-color: lightsteelblue;
+  border-left-color: $darkest-blue;
+  background-color: $dark-blue;
 
   padding-bottom: 1px;
 
@@ -92,5 +119,5 @@ h2 {
   margin: 0px 1px;
   //background-color: #fff;
   //border: 1px solid #dee2e6;
-  border-radius: 4px;
+  border-radius: 8px;
 }
